# RemoteAVRDUDE

./: CMakeLists.txt  README.md  config.cpp  config.h  configuration.cpp  configuration.h  externalcall.cpp  externalcall.h  main.cpp  stringmanip.cpp  stringmanip.h
src/: stringmanip.cpp
